# idyl

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  idyl.output  idyl.tab.cc  rename.rb  syntax.md  tests.sh
.github/workflows/: docs.yml
build_release/: CMakeCache.txt  Makefile  RtMidiConfigUninstall.cmake  cmake_install.cmake  idyl
build_release/src/modules/: Makefile  cmake_install.cmake
cmake/Modules/: FindCsound.cmake
dev/: TODO.md  analyzer_steps.md  block_expressions.md  bug_diagnosis_kick_hotreload.md  codependent_temporal.md  flow_syntax_change.md  flow_syntax_change_response.md  flow_todo.md  hot_reload.md  hot_reload_02_pain_points.md  hot_reload_03_painless.md  hot_reload_diagnosis.md  hot_reload_fix_plan.md  hot_reload_issues.md  interpreter.md  iterator_design.md  language_assessment.md  local_functions_design.md  modules_cleanup.md  optimizations.md  semantic_analysis.md  syntax.md  temporal_sync.md
doc/: build_html.sh  ch01_getting_started.md  ch02_fundamentals.md  ch03_functions.md  ch04_temporal.md  ch05_flows.md  ch06_control_flow.md  ch07_emit_catch.md  ch08_clock_tempo.md  ch09_process_blocks.md  ch10_modules_libraries.md  ch11_architecture.md  idyl.xml  idyl_documentation.md  style.css
doc/html/: ch01_getting_started.html  ch02_fundamentals.html  ch03_functions.html  ch04_temporal.html  ch05_flows.html  ch06_control_flow.html  ch07_emit_catch.html  ch08_clock_tempo.html  ch09_process_blocks.html  ch10_modules_libraries.html  ch11_architecture.html  idyl_documentation.html  style.css
editors/vim/: README.md  install.sh
editors/vim/after/ftplugin/: idyl.vim
editors/vim/ftdetect/: idyl.vim
editors/vim/ftplugin/: idyl.vim
editors/vim/plugin/: idyl.vim
editors/vim/python/: idyl_send.py
editors/vim/syntax/: idyl.vim
editors/vscode/: README.md  build_vsix.py  idyl-lang-0.1.0.vsix  idyl-lang-0.2.0.vsix
editors/vscode/idyl-lang/: extension.js  language-configuration.json  package.json
editors/vscode/idyl-lang/syntaxes/: idyl-markdown-injection.json  idyl.tmLanguage.json
lib/: chaos.idyl  music.idyl  stdlib.idyl
scripts/: list_midi_dev.rb  rtmidi.rb
src/: debug.hpp  idyl.cpp
src/core/: builtins.hpp  core.hpp  environment.hpp  evaluator.cpp  evaluator.hpp
src/include/: idyl_module_api.h  module.hpp
src/modules/: CMakeLists.txt  csound_module.hpp  midi_module.hpp  osc_module.hpp  serial_module.hpp
src/old_parser/: ast.hpp  idyl.l  idyl.y  idyl_parser.tab.hh  lex.yy.cc  semantics.hpp
src/parser/: ast.hpp  idyl.l  idyl.output  idyl.tab.cc  idyl.tab.hh  idyl.y  idyl_lexer.hpp  idyl_parser.tab.cc  idyl_parser.tab.hh  lex.yy.cc  location.hh  parse.cpp  parse.hpp  semantics.hpp
src/semantic/: analyzer.cpp  analyzer.hpp  scope.hpp  symbol.hpp
src/time/: audio_clock_scheduler.hpp  scheduler.hpp  sys_clock_engine.hpp
src/utilities/: filesystem.hpp  math.hpp  osc.hpp  safety.hpp  serial.hpp  span.hpp  udp.hpp
src/vm/: chunk.hpp  compiler.cpp  compiler.hpp  instruction.hpp  vm.cpp  vm.hpp
tests/: Ideas.md  basics.idl  cast.idl  countdown.idl  csound.idl  run_static.sh  run_temporal.sh  ternary_op.idl  tests.sh  trigger.idl
tests/01_pre-alpha/: .csound_module.idyl.swp  .csound_test.csd.swo  .csound_test.csd.swp  .eval_06_ticker.idl.swp  .eval_06_ticker.idyl.swp  .hot_reload.idyl.swp  bitwise.idyl  clock.idyl  clock_tempo.idl  clock_temporal.idl  csound_module.csd  csound_module.idyl  csound_module_clock.idyl  csound_osc_schedule.idyl  csound_osc_test.csd  csound_osc_test.idyl  csound_test.idl  csound_test.idyl  del.idyl  dynamic_flow.idyl  dynamic_simple_flow.idyl  emit_accessor.idyl  emit_accessor_arith.idyl  eval_01_basics.idyl  eval_02_functions.idyl  eval_03_flows.idyl  eval_04_advanced.idyl  eval_05_temporal.idl  eval_06_ticker.idyl  eval_07_strings.idyl  eval_08_osc.idl  eval_08_osc.idyl  evolving_dt.idyl  evolving_named_param.idyl  evolving_param.idyl  flow_member_counter.idyl  flow_member_phasor.idyl  flow_member_trig.idyl  flow_on.idyl  flow_opt1_caseD.idyl  (+45 more)
tests/composition/: .flow.idyl.swp  .live.idyl.swn  .live.idyl.swo  .live.idyl.swp  flow.idyl  freejazz.idyl  freejazz.orc  idea.md  live.idyl  main.csd  patch.xml  synth.orc  utilities.orc
tests/debug/: kick_minimal.idyl  send_osc.py  send_start.py
tests/deprecated_syntax/: basics.idl  csound.idl  livecode.idl  module.idl  oscillate.idl  pulse.idl
tests/static/: bitwise.idyl  cos.idyl  eval_03_flows.idyl  eval_04_advanced.idyl  eval_04_generator_forms.idyl  eval_05_block_expressions.idyl  eval_07_strings.idyl  expected_fail_fun_args_1.idyl  fib.idyl  floats.idyl  functional_flow.idyl  hot_reload_on.idyl  init_nontemporal.idyl  local_function.idyl  pow.idyl  serial_usage.idyl
tests/syntax_tentative/: basic.idl  claude_overview.md  ideas.md  issues.md  my_review_01.md  my_review_02.md  my_review_03.md  parser_requirements.md  syntax_attempt_01.md  syntax_attempt_02.md  syntax_attempt_03.md  syntax_attempt_04.md
tests/temporal/: .anonymous_hot_reload.idyl.swp  age.idyl  anonymous_hot_reload.idyl  at.idyl  block_in_on_handler.idyl  block_in_process.idyl  block_in_temporal_fn.idyl  catch_emit.idyl  clock.idyl  clock_propagation.idyl  clock_temporal.idyl  closure_init.idyl  closure_state.idyl  csound_module.csd  csound_module.idyl  csound_osc_schedule.idyl  csound_simple.idyl  csound_simple_audio.idyl  csound_spatialized.csd  csound_spatialized.idyl  del.idyl  delay_trigger_time.idyl  double_note_debug.idyl  dyn_dt_inline.idyl  dyn_dt_seq_compat.idyl  dynamic_flow.idyl  dynamic_simple_flow.idyl  each_count.idyl  each_descending.idyl  each_in_process.idyl  each_pause_resume.idyl  each_range.idyl  each_step.idyl  each_temporal.idyl  each_with_flow.idyl  eval_05_temporal.idyl  eval_08_osc.idyl  evolving_dt.idyl  evolving_named_param.idyl  evolving_param.idyl  (+50 more)
tools/idyl_ascii/: CMakeLists.txt  README.md
tools/idyl_ascii/src/: ascii_font.cpp  ascii_font.hpp  main.cpp  renderer.hpp  token_stream.cpp  token_stream.hpp  video.hpp
